--- a/1.html
+++ b/1.html
@@ -1,51 +1,25 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - html</title>
+  <title>WEB1 - welcome</title>
   <meta charset="utf-8">
 </head>
-
 <body>
-    <h1>WEB</h1>
-<ul>
-  <li>1. html </li>
-  <li>2. css</li>
-  <li>3. javascript</li>
-</ul>
-<br>
+ <h1><a href="index.html">web</a></h1>
 <ol>
-    <li>html</li>
-  <li>css</li>
-  <li>javascript</li>
-</ul>
-
-
-
-
+  <li><a href="1.html">html</a></li>
+  <li><a href="2.html">css</a></li>
+  <li><a href="3.html">javascript</a></li>
+</ol>
 <h2>HTML</h2>
 나를 구원하는 건 <strong>나 <u>자신</u></strong> 뿐이다.
 나는 <strong>할수있다</strong>
-<h1>me</h1>
-<p>교육을 받고 학식이 있는 사람만 이 세상에
 
-가치있는 공헌을 할 수 있는 건 아니다</p><p>
-
-<a href=https://www.w3.org/>교육을 받고 학식이 있는 사람</a>이 밑바탕에 발랄한 재능과
-
-창조력을 가지고 있다면 (이런 경우는 불행히도 드문데)
-
-단지 발랄한 재능과 창조력만 가진 사람보다
-
-훨씬 가치 있는 기록을 남기기가 쉽다</p>
-
-그런 사람은 더 명확하게 자신의 의견을 표현하고
-
-자신의 생각을 끝까지 추구하는 경향이 있다<p style="margin-top:40px;">
-
-그리고 가장 중요한 것은 그런 사람들의 십중팔구는
-
-학식이 없는 사상가들보다 겸손하다는 점이다</p>
-<img src="coding.jpg"width='430'>
-<br>안녕
+<p>
+HTML이란 무엇일까요?
+수학에서 덧셈 기호를 +로 나타내고, 뺄셈 기호를 -로 나타내듯
+웹 사이트에서 화면에 표시되는 정보를 약속 한 것이 HTML입니다.
+HTML은 HyperText Markup Language의 약자인데요
+</p>
 </head>
-<html>
+</html>
